examples/eyre_output_context.run.stderr
Error: kawoosh

Caused by:
    examples/eyre_output_context.rs:10:9: kaboom

Location:
    examples/eyre_output_context.rs:10:5
